fix ticket auto buyer design on small screen

--- a/app/style/PurchaseTickets.less
+++ b/app/style/PurchaseTickets.less
@@ -354,4 +354,12 @@
     margin-left: -10px;
     margin-top: 25px;
   }
+
+  .stakepool-auto-buyer-row {
+    flex-direction: column;
+  }
+
+  .stakepool-auto-buyer-row-portion-full {
+    text-align: start
+  }
 }
